# healthion

./: README.md
healthion-api/: Dockerfile  docker-compose.yml  prestart.sh  pyproject.toml
healthion-api/.cursor/rules/: routes.mdc
healthion-api/.github/workflows/: ci.yml
healthion-api/app/: config.py  database.py  main.py  mappings.py
healthion-api/app/api/: __init__.py
healthion-api/app/api/routes/v1/: __init__.py  auth.py  fake_import.py  heart_rate.py  import_data.py  workouts.py
healthion-api/app/models/: __init__.py  active_energy.py  heart_rate_data.py  heart_rate_recovery.py  metadata_entry.py  record.py  user.py  workout.py  workout_statistic.py
healthion-api/app/models/apple/: workout.py
healthion-api/app/models/apple/auto_export/: active_energy.py  heart_rate_data.py  heart_rate_recovery.py
healthion-api/app/models/apple_mcp/: record.py  workout.py  workout_stat.py
healthion-api/app/repositories/: __init__.py  active_energy_repository.py  base_heart_rate_repository.py  heart_rate.py  heart_rate_data_repository.py  heart_rate_recovery_repository.py  heart_rate_repository.py  new_workout_repository.py  workout.py  workout_repository.py
healthion-api/app/repositories/apple/auto_export/: active_energy_repository.py  heart_rate_data_repository.py  heart_rate_recovery_repository.py  workout_repository.py
healthion-api/app/repositories/apple/healthkit/: new_workout_repository.py  workout_repository.py  workout_statistic_repository.py
healthion-api/app/schemas/: __init__.py  active_energy.py  health_data.py  heart_rate.py  new_workout.py  response.py  user.py  workout.py  workout_statistics.py
healthion-api/app/schemas/apple/: workout_statistics.py
healthion-api/app/schemas/apple/auto_export/: import_schemas.py  workout_queries.py
healthion-api/app/schemas/apple/healthkit/: workout_import.py  workout_responses.py
healthion-api/app/services/: __init__.py  active_energy_service.py  auth_service.py  heart_rate_service.py  import_service.py  json_service.py  new_workout_service.py  services.py  user_service.py  workout_service.py  workout_statistic_service.py
healthion-api/app/services/mixins/: heart_rate_data_service.py  heart_rate_recovery_service.py
healthion-api/app/utils/: auth_dependencies.py  exceptions.py
healthion-api/config/: .env.example
healthion-api/envs/: .env.example
healthion-api/migrations/versions/: 161c6716451a_apple_mcp.py  21b31fe8c473_accept_json_import.py  461a85f13260_apple_mcp.py  6bb12525e21b_foreign_key.py  70f784d3b912_init.py  790a68ddc1d6_add_user_id.py  791d2bb9ba20_workout_statistic_support.py  fa8f652aef59_init.py
healthion-api/scripts/start/: app.sh
healthion-mcp/: pyproject.toml  start.py
healthion-mcp/.github/workflows/: ci.yml
healthion-mcp/app/: config.py  main.py  proxy_client.py  test_client.py
healthion-mcp/app/mcp/: mcp.py
healthion-mcp/app/mcp/tools/: heart_rate.py  workouts.py
healthion-mcp/envs/: .env.example
healthion-web/: .env.example  Caddyfile  Dockerfile  (+4 more)
(+29 files in other folders)
